# pygamepad

./: README.md  pyproject.toml
gamepad/: gamepad.py
